# south-dakota-voter-registration-data

./: .gitignore  Parse SD monthly voter registration report.ipynb  README-template.md  README.md  build_file.py  build_files.py  check.py  elex-lookup.json  pyproject.toml  requirements.txt  sd-voter-registration-data-long.csv  sd-voter-registration-data-simplified.csv  sd-voter-registration-data-wide.csv  sd-voter-registration-data.csv  us-county-fips.csv
.github/workflows/: main.yml
data/: 1976-05-17.csv  1976-06-01.csv  1976-10-18.csv  1978-05-22.csv  1978-10-23.csv  1980-05-19.csv  1980-10-20.csv  1982-05-17.csv  1982-10-18.csv  1984-05-21.csv  1984-10-22.csv  1986-05-19.csv  1986-11-04.csv  1988-02-13.csv  1988-05-13.csv  1988-10-24.csv  1990-05-21.csv  1990-10-22.csv  1992-02-10.csv  1992-05-18.csv  1992-10-19.csv  1993-08-03.csv  1994-05-23.csv  1994-11-08.csv  1996-02-12.csv  1996-05-20.csv  1996-11-05.csv  1998-05-18.csv  1998-10-19.csv  2000-05-22.csv  2000-10-23.csv  2001-03-26.csv  2002-05-20.csv  2002-10-21.csv  2004-05-17.csv  2004-10-18.csv  2006-05-22.csv  2006-10-23.csv  2008-05-19.csv  2008-11-04.csv  (+146 more)
pdfs/: 1978-06-06-enh.txt  2018-01-02.txt
