[project]
name = "south-dakota-voter-registration-data"
version = "0.1.0"
description = "Tracking monthly voter registration snapshots in South Dakota."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "jupyterlab>=4.4.6",
    "pdfplumber>=0.11.7",
    "requests>=2.32.5",
    "slack-sdk>=3.36.0",
]
